<resources>
    <string name="app_name">نظام البوصلة الصحية</string>
    <string name="createٍِِِِAccount">إنشاء حساب</string>
    <string name="username">اسم المستخدم</string>
    <string name="FirstName">[اسم المستخدم]</string>
    <string name="First_Name">الاسم الأول</string>
    <string name="Last_Name">الاسم المستخدم</string>
    <string name="First_Name_">[الاسم الأول]</string>
    <string name="Last_name">[الاسم الأخير]</string>
    <string name="First_name">[الاسم الأول]</string>
    <string name="Birthday">تاريخ الميلاد</string>
    <string name="birthday">[تاريخ الميلاد]</string>
    <string name="Nationality">الجنسية</string>
    <string name="nationality">[الجنسية]</string>
    <string name="Gender">الجنس</string>
    <string name="gender">[الجنس]</string>
    <string name="sick_birthday">تاريخ الميلاد</string>
    <string name="sectionity">اللإختصاص</string>
    <string name="create_account">إنشاء الحساب</string>
    <string name="abl">قادر</string>
    <string name="unable">غير قادر</string>
    <string name="sick_age">عمر المريض</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="email_sick">[Email]</string>
    <string name="email_doctor">[Email]</string>
    <string name="create_date">[تاريخ إنشاء الحساب]</string>
    <string name="check_email">إيميل التحقق</string>
    <string name="password">[Password]</string>
    <string name="password_doctor">Password</string>
    <string name="location">الموقع</string>
    <string name="subcription">الإشتراكات</string>
    <string name="subcription_doctor">[الإشتراكات]</string>
    <string name="check_email_doctor">[إيميل الحقق]</string>
    <string name="create_date_doctor">تاريخ إنشاء الحساب</string>
    <string name="doctor_sectionity">الإختصاص</string>
    <string name="Sectionity">[الإختصاص]</string>
    <string name="UserName">UserName</string>
    <string name="UserEmail">UserEmail</string>
    <string name="pressure_rate">معدل الضغط</string>
    <string name="earth_number">الهاتف الأرضي</string>
    <string name="discreption">الوصف</string>
    <string name="phone_number">مرض سابق</string>
    <string name="sugger_rate">معدل السكر</string>
    <string name="tempriture">الحرارة</string>
    <string name="doctor_name">اسم الطبيب</string>
    <string name="send">ارسال</string>
    <string name="sick_name">اسم المريض</string>
    <string name="search">البحث</string>
    <string name="home_page">الصفحة الرئيسية</string>
    <string name="medical_advise">الأستشارة الطبية</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="settings">الأعدادات</string>
    <string name="logout">تسجيل خروج</string>
    <string name="home_request">أستشارة منزلية</string>
    <string name="off">off</string>
    <string name="setting">الإعدادات</string>
    <string name="language">اللغة</string>
    <string name="share">مشاركة</string>
    <string name="help">المساعدة</string>
    <string name="dark_mode">الوضع الليلي</string>
    <string name="todo">TODO</string>
    <string name="notification">الإشعارات</string>
    <string name="invalid_name">"الرجاء إدخال اسم مستخدم"</string>
    <string name="invalid_email">الرجاء إدخال بريد إلكتروني صحيح</string>
    <string name="invalid_password">الرجاء إدخال كلمة مرور مكونة من 6 محارف</string>
    <string name="invalid_confirm_password">الرجاء التأكد من كلمة المرور</string>
    <string name="invalid_mobile_phone_number">الرجاء إدخال رقم هاتف صحيح</string>
    <string name="invalid_birthday">الرجاء إدخال تاريخ ميلاد</string>
    <string name="title_activity_recycl_serching">RecyclSerching</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invalid_password2">الرجاء إدخال كلمة مرور خالية من الرموز</string>
    <string name="invalid_Content">الرجاء عدم ترك الحقل فارغ</string>
    <string name="invalid_Content2">الرجاء التأكد من المدخلات</string>
    <string name="cancel">cancel</string>
</resources>